--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
     <body>
         <h1>The Brown Bear</h1>
+        <div id="introduction">
+            <h2>About Brown Bears</h2>
+        </div>
     </body>
 
 </html>
