--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
         <h1>The Brown Bear</h1>
         <div id="introduction">
             <h2>About Brown Bears</h2>
+            <p>The brown bear (<em>Ursus arctos</em>) is native to parts of northern Eurasia and North 
+                America. Its conservation status is currently <strong>Least Concern</strong>.<br /><br /> 
+                There are many subspecies within the brown bear species, including the Atlas bear and 
+                the Himalayan brown bear.</p>
+                <h3>Species</h3>
+                <ul>
+                    <li>Arctos</li>
+                    <li>Collarus</li>
+                    <li>Horribilis</li>
+                    <li>Nelsoni (extinct)</li>
+                </ul>
         </div>
     </body>
 
