--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <body>
         <h1>The Brown Bear</h1>
+
         <div id="introduction">
             <h2>About Brown Bears</h2>
             <p>The brown bear (<em>Ursus arctos</em>) is native to parts of northern Eurasia and North 
@@ -16,7 +17,15 @@
                     <li>Horribilis</li>
                     <li>Nelsoni (extinct)</li>
                 </ul>
+                <h3>Features</h3>
+                <p>Brown bears are not always completely brown. Some can be reddish or yellowish. 
+                    They have very large, curved claws and huge paws. Male brown bears are often 30% 
+                    larger than female brown bears. They can range from 5 feet to 9 feet from head to 
+                    toe.</p>
         </div>
+
+        
+
     </body>
 
 </html>
