--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 Turkmenistan, and Uzbekistan.</p>
         </div>
 
+        <div id="media">
+            <h2>Media</h2>
+            <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" 
+            alt="A Brown Bear"/>
+            <video src="https://content.codecademy.com/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" width="320" height="240" controls>Video Not Supported</video>
+        </div>
+
     </body>
 
 </html>
