--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+    <head>
+        <title>The Brown Bear</title>
+    </head>
+
     <body>
         <h1>The Brown Bear</h1>
 
@@ -44,7 +48,7 @@
             alt="A Brown Bear"/>
             <video src="https://content.codecademy.com/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" width="320" height="240" controls>Video Not Supported</video>
         </div>
-        
+
     </body>
 
 </html>
